--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>Excel File Processing</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
 </head>
 <body>
     <h1>Excel File Processing</h1>
     <form action="/process" method="post" enctype="multipart/form-data">
-        <label for="file1">File 1:</label>
+        <label for="file1">Choose Old File:</label>
         <input type="file" name="file1" id="file1"><br><br>
-        <label for="file2">File 2:</label>
-        <input type="file" name="file2" id="file2"><br><br>
+{#        <label for="file2">File 2:</label>#}
+{#        <input type="file" name="file2" id="file2"><br><br>#}
         <input type="submit" value="Process Files">
     </form>
 </body>
