--- a/templates/result.html
+++ b/templates/result.html
@@ -2,37 +2,43 @@
 <html>
 <head>
     <title>Result</title>
+    <link rel="stylesheet" type="text/css" href="table_style.css">
     <style>
         table {
-            border-collapse: collapse;
-            width: 100%;
-        }
+        width: 100%;
+  border-collapse: collapse;
+}
 
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
+.styled-table thead th {
+  background-color: #f2f2f2;
+  color: #333;
+  font-weight: bold;
+  text-align: left;
+  padding: 10px;
+}
 
-        th {
-            background-color: #f2f2f2;
-        }
+.styled-table tbody td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
 
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
+.styled-table tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
 
-        tr:hover {
-            background-color: #e9e9e9;
-        }
+.styled-table tbody tr:hover {
+  background-color: #e9e9e9;
+}
     </style>
 </head>
+
 <body>
     <h1>Processing Result</h1>
     <p>The processed file is ready for download:</p>
     <a href="{{ url_for('download') }}" download>Download</a>
 
     <h2>Rows That Did Not Work Properly</h2>
-    <table style="table-layout: auto; display: inline-table;">
+    <table class='styled-table'>
         <thead>
             <tr>
                 <th>Hebrew</th>
