--- a/templates/result.html
+++ b/templates/result.html
@@ -2,43 +2,62 @@
 <html>
 <head>
     <title>Result</title>
-    <link rel="stylesheet" type="text/css" href="table_style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='table_style.css') }}">
     <style>
         table {
-        width: 100%;
-  border-collapse: collapse;
-}
+            width: 100%;
+            border-collapse: collapse;
+            border: 1px solid black;
+        }
 
-.styled-table thead th {
-  background-color: #f2f2f2;
-  color: #333;
-  font-weight: bold;
-  text-align: left;
-  padding: 10px;
-}
+        .styled-table thead th {
+            background-color: #f2f2f2;
+            color: #333;
+            font-weight: bold;
+            text-align: left;
+            padding: 10px;
+            border-bottom: 1px solid black;
+            border: 1px solid black;
+        }
 
-.styled-table tbody td {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
+        .styled-table tbody td {
+            text-align: left;
+            padding: 8px;
+            border: 1px solid black;
+        }
 
-.styled-table tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
+        .styled-table tbody tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
 
-.styled-table tbody tr:hover {
-  background-color: #e9e9e9;
-}
+        .styled-table tbody tr:hover {
+            background-color: #e9e9e9;
+        }
+
+        .download-link {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #2196F3;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-weight: bold;
+        }
+
+        .download-link:hover {
+            background-color: #64B5F6;
+        }
     </style>
 </head>
 
 <body>
     <h1>Processing Result</h1>
     <p>The processed file is ready for download:</p>
-    <a href="{{ url_for('download') }}" download>Download</a>
+    <a class="download-link" href="{{ url_for('download', file_name='output.xlsx') }}" download>Download Updated File</a>
+    </br></br>
 
-    <h2>Rows That Did Not Work Properly</h2>
-    <table class='styled-table'>
+    <h2>Rows That Did Not Convert Properly</h2>
+    <table class="styled-table">
         <thead>
             <tr>
                 <th>Hebrew</th>
@@ -60,5 +79,7 @@
             {% endfor %}
         </tbody>
     </table>
+    </br>
+    <a class="download-link" href="{{ url_for('download', file_name='errors.xlsx') }}" download>Download Errors File</a>
 </body>
 </html>
